<resources>
    <string name="app_name">Trafik - Trak</string>
    <string name="action_settings">Settings</string>
    <string name="hourly_summary">Here, you can view hourly traffic info in table, chart...</string>
    <string name="hourly_heading">Hourly Trafik</string>
    <string name="view_hourly_info">See more</string>
    <string name="daily_heading">Daily Trafik</string>
    <string name="daily_summary">Daily Traffic summaries is available here in table, charts...</string>
    <string name="view_daily_info">See More</string>
    <string name="weekly_heading">Weekly Trafik</string>
    <string name="weekly_summary">Here, Weekly summary is available...</string>
    <string name="view_weekly_info">See It Weekly</string>
    <string name="view_monthly_info">Month View</string>
    <string name="monthly_summary">View the monthly summary here in an interactive form...</string>
    <string name="monthly_heading">Monthly Trafik</string>
    <string name="annual_heading">Annual Trafik</string>
    <string name="annual_summary">Get yearly traffic information here...</string>
    <string name="view_annual_info">Go see it</string>
    <string name="available_date">Available Dates:</string>
    <string name="pick_date">Select a date</string>
    <string name="selected_date">Selected Date is: Please select...</string>
    <string name="view">See Analysis</string>
    <string name="time">Time:</string>
    <string name="title_activity_hourly_trafik_analysis">Hourly Trafik Analysis</string>
    <string name="title_activity_daily_trafik_analysis">Daily Trafik Analysis</string>
    <string name="hourly_barchat_heading">Bar Chart</string>
    <string name="bar_chart_heading">Bar Chart</string>
    <string name="line_chart_heading">Line Chart</string>
    <string name="title_activity_weekly_trafik_analysis">Weekly Traffic</string>
    <string name="pick_date_weekly">Pick</string>
    <string name="weekly_select">Pick a Week:</string>
    <string name="monthly_select">Pick a Month:</string>
    <string name="selected_week">Week selected is:</string>
    <string name="selected_month">Month selected is:</string>
    <string name="title_activity_monthly_trafik_analysis">Monthly Traffic</string>
    <string name="available_year">Available Years:</string>
    <string name="select_year">Pick a year</string>
    <string name="title_activity_home_screen">Home Screen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_on_home_screen">Get Live Vehicle Counts and Analysis</string>
    <string name="live_data">Live Data</string>
    <string name="esal_message">Estimate the Equivalent Standard Axle Load</string>
    <string name="view_esal">ESAL</string>
    <string name="phf_message">Estimate the Peak Hour Factor</string>
    <string name="view_phf">PHF</string>
    <string name="title_activity_aadtestimator">AADT Estimator</string>
    <string name="prompt_daily_volume">Daily Volume</string>
    <string name="prompt_mfi">Monthly Factor</string>
    <string name="prompt_wfi">Weekly Factor</string>
    <string name="estimate_aadt">Estimate AADT</string>
    <string name="error_field_required">This field is required</string>
    <string name="invalid_entry">Enter a positive number</string>
    <string name="title_activity_esalestimator">ESAL Estimator</string>
    <string name="prompt_lane_factor">Lane Factor</string>
    <string name="prompt_growth_rate">Growth Rate (%)</string>
    <string name="prompt_design_life">Design Life (yrs)</string>
    <string name="prompt_ni">Number of Axles</string>
    <string name="prompt_fei">Load Equivalency Factor</string>
    <string name="estimate_esal">Estimate ESAL</string>
    <string name="view_aadt">AADT</string>
    <string name="aadt_message">Estimate the Annual Average Daily Traffic</string>
    <string name="prompt_number_of_category">Number of Category</string>
    <string name="title_activity_esal_estimator_category">Catogory 1</string>
    <string name="estimate_category">Next Category</string>
    <string name="prompt_aadt">Enter AADT</string>
    <string name="title_activity_esal_estimated_result">Esal Estimated Result</string>
    <string name="estimated_result">Estimated Esal Result is:</string>
</resources>
