<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:showIn="@layout/weekly_trafik"
    tools:context="com.trafik.trafiktrak.WeeklyTrafik"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/available_date"
        android:id="@+id/textView"
        android:textColor="@color/black"
        android:layout_marginTop="49dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/available_date_on_weekly"
        android:textColor="@color/colorPrimary"
        android:textStyle="italic"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly_select"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/select_weekly"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textStyle="italic"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date_weekly"
            android:id="@+id/pick_date_on_weekly"
            android:padding="10dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"

            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/selected_week"
        android:textColor="@color/black"
        android:id="@+id/selected_week"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/view_weekly_table"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="72dp" />

</LinearLayout>
