<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.trafik.trafiktrak.AnnualTrafik"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/available_year"
        android:id="@+id/textView"
        android:textColor="@color/black"
        android:layout_marginTop="49dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_year"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/available_year_id"
        android:textColor="@color/colorPrimary"
        android:textStyle="italic"
        />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/select_year"
            android:textColor="@color/black"
            android:layout_marginTop="15dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_for_years"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            />


    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/view_annual_table"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="72dp" />

</LinearLayout>
