<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/daily_trafik_analysis"
    tools:context="com.trafik.trafiktrak.DailyTrafikAnalysis"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_heading"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />

        <TableLayout
            android:id="@+id/daily_table1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:padding="10dp"
            android:stretchColumns="*"
            ></TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bar_chart_heading"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/daily_bar_chart"
            android:layout_width="match_parent"
             android:layout_height="350dp"
            android:layout_marginBottom="25dp">

        </com.github.mikephil.charting.charts.BarChart>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line_chart_heading"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />

        <com.github.mikephil.charting.charts.LineChart
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:id="@+id/daily_line_chart"
            >

        </com.github.mikephil.charting.charts.LineChart>

    </LinearLayout>
</ScrollView>
